[gd_scene load_steps=9 format=3 uid="uid://2dukdy6xneie"]

[ext_resource type="Script" path="res://player.gd" id="1_b7hbe"]
[ext_resource type="Texture2D" uid="uid://dg1bfrsapb7w1" path="res://art/playerGrey_up1.png" id="2_ykmsk"]
[ext_resource type="Texture2D" uid="uid://r3okch0ksp3k" path="res://art/playerGrey_up2.png" id="3_y2f5e"]
[ext_resource type="Texture2D" uid="uid://dxga4ierwe3fr" path="res://art/playerGrey_walk1.png" id="4_h2hnu"]
[ext_resource type="Texture2D" uid="uid://l8v1c3mh5pvr" path="res://art/playerGrey_walk2.png" id="5_wmiq1"]
[ext_resource type="AudioStream" uid="uid://cgenub74ojx7s" path="res://art/163441__under7dude__man-getting-hit.wav" id="6_qiwyy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_65vf1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ykmsk")
}, {
"duration": 1.0,
"texture": ExtResource("3_y2f5e")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_h2hnu")
}, {
"duration": 1.0,
"texture": ExtResource("5_wmiq1")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dyroe"]
radius = 27.0
height = 68.0

[node name="Player" type="Area2D"]
script = ExtResource("1_b7hbe")
metadata/_edit_group_ = true

[node name="playerAnimation" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
skew = 0.0296706
sprite_frames = SubResource("SpriteFrames_65vf1")
animation = &"up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_dyroe")

[node name="hitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qiwyy")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
